--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
             </div>
         </div>
 
-        <h1 class="tldr">
-            <b>TL;DR</b>:
-            TriNeRFLet: Multiscale 2D wavelet representation with high quality reconstruction and super-resolution.
-            <a href="#head1">Jump To Results</a>
-        </h1>
+<!--        <h1 class="tldr">-->
+<!--            <b>TL;DR</b>:-->
+<!--            TriNeRFLet: Multiscale 2D wavelet representation with high quality reconstruction and super-resolution.-->
+<!--            <a href="#head1">Jump To Results</a>-->
+<!--        </h1>-->
 
 
         <video id="main-video" muted autoplay playsinline loop>
