--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
 
         <div class="link-labels base-row">
-            <div class="base-col icon-col"><a href="https://github.com/RajaeeKh/TriNerfLet" target="_blank" class="link-block"><img
+            <div class="base-col icon-col"><a href="https://arxiv.org/abs/2401.06191" target="_blank" class="link-block"><img
                     src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/5cab99df4998decfbf9e218e_paper-01.png"
                     alt="paper"
                     sizes="(max-width: 479px) 12vw, (max-width: 767px) 7vw, (max-width: 991px) 41.8515625px, 56.6953125px"
