--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 </button>
             </div>
         </div>
-        <video id="rec-video" muted autoplay webkit-playsinline playsinline loop controls>
+        <video id="rec-video" muted autoplay webkit-playsinline playsinline loop controls class="center-image">
             <source id="rec-video-src" src="data/videos/3d_rec/trinerflet/ship_rec.mp4" type="video/mp4">
         </video>
 
@@ -299,7 +299,7 @@
                 </button>
             </div>
         </div>
-        <video id="sr-video" muted autoplay webkit-playsinline playsinline loop controls>
+        <video id="sr-video" muted autoplay webkit-playsinline playsinline loop controls class="center-image">
             <source id="sr-video-src" src="data/videos/sr/ship_sr/sr.mp4" type="video/mp4">
         </video>
 
@@ -321,9 +321,7 @@
             <option value="lr" >Low Resolution</option>
         </select></div>
 
-        <video id="sr-video_llff" muted autoplay webkit-playsinline playsinline loop controls class="center-image">
-            <source id="sr-video-src-llff" src="data/videos/llff/fern/it20000-test_hr.mp4" type="video/mp4">
-        </video>
+
 
         <div class="base-row farm-thumbnail-row">
 
@@ -376,6 +374,10 @@
                 </button>
             </div>
         </div>
+
+        <video id="sr-video_llff" muted autoplay webkit-playsinline playsinline loop controls class="center-image">
+            <source id="sr-video-src-llff" src="data/videos/llff/fern/it20000-test_hr.mp4" type="video/mp4">
+        </video>
 
 
 
