--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="base-row author-row">
             <div class="base-col author-col">
-                <a href="https://www.linkedin.com/in/rajaei-khatib-084838135/" target="_blank" class="author-text">
+                <a href="https://rajaeekh.github.io" target="_blank" class="author-text">
                     Rajaei Khatib
                 </a>
             </div>
