--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <meta content="TriNeRFLet: A Wavelet Based Multiscale Triplane NeRF Representation"
+    <meta content="TriNeRFLet: A Wavelet Based Triplane NeRF Representation"
           name="description" />
     <meta content="TriNeRFLet: Multiscale 2D wavelet representation with high quality reconstruction and super-resolution." property="og:title" />
     <meta content="TriNeRFLet: Multiscale 2D wavelet representation with high quality reconstruction and super-resolution."
           property="og:description" />
 <!--    <meta content="https://instruct-nerf2nerf.github.io/data/open_graph.png" property="og:image" />-->
-    <meta content="TriNeRFLet: A Wavelet Based Multiscale Triplane NeRF Representation" property="twitter:title" />
+    <meta content="TriNeRFLet: A Wavelet Based Triplane NeRF Representation" property="twitter:title" />
     <meta content="TriNeRFLet: Multiscale 2D wavelet representation with high quality reconstruction and super-resolution."
           property="twitter:description" />
 <!--    <meta content="https://instruct-nerf2nerf.github.io/data/open_graph.png" property="twitter:image" />-->
@@ -19,7 +19,7 @@
     <meta name="google-site-verification" content="IU_p_Bh23c57bWY86GozeURarZu86wzat37izaia0f4" />
 
 
-    <title>TriNeRFLet: A Wavelet Based Multiscale Triplane NeRF Representation</title>
+    <title>TriNeRFLet: A Wavelet Based Triplane NeRF Representation</title>
 
     <!-- Google tag (gtag.js) -->
 <!--    <script async src="https://www.googletagmanager.com/gtag/js?id=G-87HN038KJT"></script>-->
@@ -57,9 +57,9 @@
 <div class="section">
     <div class="container">
         <div class="title-row">
-            <h1 class="title">TriNeRFLet: A Wavelet Based Multiscale Triplane NeRF Representation</h1>
+            <h1 class="title">TriNeRFLet: A Wavelet Based Triplane NeRF Representation</h1>
             <h1 class="subheader">Multiscale 2D wavelet representation with high quality reconstruction and super-resolution</h1>
-<!--            <h1 class="subheader">*********</h1>-->
+            <h1 class="subheader"><b>ECCV 2024</b></h1>
         </div>
         <div class="base-row author-row">
             <div class="base-col author-col">
@@ -94,7 +94,7 @@
             </div>
             <div class="base-col icon-col">
                 <strong class="link-labels-text">&lt;/Code&gt;
-                    <br>(Coming Soon)</strong>
+                    </strong>
             </div>
         </div>
 
