--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <!--        <video id="main-video" muted autoplay playsinline loop class="center-image">-->
 <!--            <source id="mp4" src="data/videos/ngp_ep0002_rgb.mp4" type="video/mp4">-->
         <video id="main-video" muted autoplay webkit-playsinline playsinline loop  class="center-vid">
-            <source id="demo" src="data/videos/demo.mp4" type="video/mp4">
+            <source id="demo" src="data_compress_5/videos/demo.mp4" type="video/mp4">
         </video>
 
 
@@ -170,6 +170,27 @@
 
         <div class="paragraph" style="text-align: center">
             .
+        </div>
+
+        <h4 class="section-header" id="head33">Display Data Quality</h4>
+        <div class="paragraph" style="text-align: center">
+            If you use internet with low speed or on a mobile, keep the data quality on compressed.
+            Otherwise switch to the original data.
+        </div>
+
+        <div class="base-row farm-thumbnail-row">
+            <div class="base-col farm-thumbnail-col2">
+                <button class="thumbnail-btn" id="compressed_button">
+                    <img src="data/icons/compressed-file-svgrepo-com.svg" alt="paper" class="thumbnails" />
+                    Compressed Quality
+                </button>
+            </div>
+            <div class="base-col farm-thumbnail-col2">
+                <button class="thumbnail-btn" id="original_button">
+                    <img src="data/icons/data-development-resource-library-svgrepo-com.svg" alt="paper" class="thumbnails" />
+                    Original Data
+                </button>
+            </div>
         </div>
 
 <!--        <h2 class="section-header">Overview</h2>-->
