--- a/index.html
+++ b/index.html
@@ -180,15 +180,21 @@
 
         <div class="base-row farm-thumbnail-row">
             <div class="base-col farm-thumbnail-col2">
+                <button class="thumbnail-btn" id="high_compressed_button">
+                    <img src="data/icons/compression-svgrepo-com.svg" alt="paper" class="thumbnails" />
+                    Highly Compressed
+                </button>
+            </div>
+            <div class="base-col farm-thumbnail-col2">
                 <button class="thumbnail-btn" id="compressed_button">
                     <img src="data/icons/compressed-file-svgrepo-com.svg" alt="paper" class="thumbnails" />
-                    Compressed Quality
+                    Compressed
                 </button>
             </div>
             <div class="base-col farm-thumbnail-col2">
                 <button class="thumbnail-btn" id="original_button">
                     <img src="data/icons/data-development-resource-library-svgrepo-com.svg" alt="paper" class="thumbnails" />
-                    Original Data
+                    Original
                 </button>
             </div>
         </div>
