--- a/index.html
+++ b/index.html
@@ -422,16 +422,18 @@
 
 
 
-<!--        <div class="citation add-top-padding">-->
-<!--            <h1 id="abstract"> Citation </h1>-->
-<!--            <p> If you use this work or find it helpful, please consider citing: (bibtex) </p>-->
-<!--            <pre id="codecell0">@inproceedings{instructnerf2023,-->
-<!--        &nbsp;author = {Haque, Ayaan and Tancik, Matthew and Efros, Alexei and Holynski, Aleksander and Kanazawa, Angjoo},-->
-<!--        &nbsp;title = {Instruct-NeRF2NeRF: Editing 3D Scenes with Instructions},-->
-<!--        &nbsp;booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision},-->
-<!--        &nbsp;year = {2023},-->
-<!--        } </pre>-->
-<!--        </div>-->
+        <div class="citation add-top-padding">
+            <h1 id="abstract"> Citation </h1>
+            <p> If you use this work or find it helpful, please consider citing: (bibtex) </p>
+            <pre id="codecell0">@inproceedings{khatib2025trinerflet,
+  title={TriNeRFLet: A Wavelet Based Triplane NeRF Representation},
+  author={Khatib, Rajaei and Giryes, Raja},
+  booktitle={European Conference on Computer Vision},
+  pages={358--374},
+  year={2025},
+  organization={Springer}
+} </pre>
+        </div>
 
         <h2 class="section-header">Acknowledgments</h2>
         <div class="paragraph">
